plants.html добавлены кнопки для администратора, стили вынесены в отдельный файл css

--- a/module.frontend-service/src/main/resources/static/index.html
+++ b/module.frontend-service/src/main/resources/static/index.html
@@ -29,6 +29,7 @@
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="BotanicaStyle.css" rel="stylesheet">
     <link href="Auth/AuthFormStylesheet.css" rel="stylesheet">
+    <link href="Plants/plants.css" rel="stylesheet">
 
     <title>Simple Botanica 1.0</title>
 </head>
@@ -72,7 +73,7 @@
 </footer>
 
 <script src="index.js"></script>
-<script src="PlantsCardsList/plants.js"></script>
+<script src="Plants/plants.js"></script>
 <script src="Auth/AuthFormController.js"></script>
 
 </body>
