Начальный этап создания страницы - карточки растения

--- a/module.frontend-service/src/main/resources/static/Plants/plants.html
+++ b/module.frontend-service/src/main/resources/static/Plants/plants.html
@@ -24,9 +24,9 @@
                 <p class="text text_center">
                     Описание
                 </p>
-                <a class="page__button text text_center" href="#" ng-click="showPlantDetails(plant.id)">Подробнее</a>
+                <a class="page__button text text_center" href="" ng-click="showPlantDetails(plant.id)">Подробнее</a>
                 <div class="admin__container" ng-show="isAdmin()">
-                    <a class="page__button text text_center" href="#" ng-click="showPlantDetails(plant.id)">Удалить</a>
+                    <a class="page__button text text_center" href="#" ng-click="deletePlant(plant.id)">Удалить</a>
 
                 </div>
             </div>
