--- a/module.frontend-service/src/main/resources/static/index.html
+++ b/module.frontend-service/src/main/resources/static/index.html
@@ -75,7 +75,7 @@
 <script src="index.js"></script>
 <script src="Plants/plants.js"></script>
 <script src="Auth/AuthFormController.js"></script>
-
+<script src="PlantCard/PlantCard.js"></script>
 </body>
 
 </html>
