--- a/module.frontend-service/src/main/resources/static/Plants/Plants.html
+++ b/module.frontend-service/src/main/resources/static/Plants/Plants.html
@@ -1,6 +1,5 @@
 <div>
     <div class="top__container plantrepresentation__container">
-
         <form class="form__search">
             <div class="flex__container">
                 <div>
@@ -16,27 +15,25 @@
 
         <div class="top__container plantcards__container">
             <div class="plant__card" ng-repeat="plant in plantsPage">
-                <div class="relative__container">
-<!--                    <img class="overlay__element" src="img/delete.png" ng-show="isAdmin()">-->
-                    <img class="plant__photo" ng-src="{{plant.photo}}" alt="{{plant.name}}" src="">
-                </div>
-                <h4 class="plant__name__header">{{plant.name}}</h4>
-                <p class="text text_center">
-                    Описание
-                </p>
-                <a class="page__button text text_center" href="" ng-click="showPlantDetails(plant.id)">Подробнее</a>
-                <div class="admin__container" ng-show="isAdmin()">
-                    <a class="page__button text text_center" href="#" ng-click="deletePlant(plant.id)">Удалить</a>
+                <div class="plant__card__body__container">
+                    <img class="plant__photo" ng-src="{{imgPath}}{{plant.filePath}}" alt="{{plant.name}}" src="">
 
+                    <h4 class="plant__name__header">{{plant.name}}</h4>
+                    <p class="text text_center">
+                        {{plant.shortDescription}}
+                    </p>
+                </div>
+                <div class="plant__card__bottom_container">
+                    <a class="page__button mb-5 text text_center" href="" ng-click="showPlantDetails(plant.id)">Подробнее</a>
+                    <a class="page__button mb-5 text text_center" href="#" ng-click="deletePlant(plant.id)"
+                       ng-show="isAdmin()">Удалить</a>
                 </div>
             </div>
         </div>
 
         <div class="pagination__container">
-            <!--            pagination-->
             <ul uib-pagination total-items="totalItems" ng-model="currentPage" max-size="maxPages"
                 class="" boundary-links="true" num-pages="numPages"></ul>
         </div>
     </div>
-    <!--    пагинация   -->
 </div>
