--- a/module.frontend-service/src/main/resources/static/PlantCard/PlantCard.html
+++ b/module.frontend-service/src/main/resources/static/PlantCard/PlantCard.html
@@ -2,7 +2,7 @@
     <div class="top__container">
         <div class=" flex__container plant__info__card__container">
             <div class="right__container">
-                <img class="plant__photo" ng-src="{{imgPath}}{{plant.photo}}" alt="{{plant.name}}" src="">
+                <img class="plant__photo" ng-src="{{imgPath}}{{plant.filePath}}" alt="{{plant.name}}" src="">
                 <button class="page__button mb-5 text text_center" ng-click="addPlantToUsersList()"
                         ng-show="callPlace===1">
                     Добавить к себе
@@ -19,7 +19,7 @@
             <div class="info__container">
                 <h4 class="plant__name__header">{{plant.name}}</h4>
                 <h5 class="text"> {{plant.family}}</h5>
-                <h5 class="text"> {{plant.genius}}</h5>
+                <h5 class="text"> {{plant.genus}}</h5>
                 <p class="text"> {{plant.description}}</p>
             </div>
         </div>
