--- a/module.frontend-service/src/main/resources/static/Plants/Plants.html
+++ b/module.frontend-service/src/main/resources/static/Plants/Plants.html
@@ -33,7 +33,7 @@
 
         <div class="pagination__container">
             <ul uib-pagination total-items="totalItems" ng-model="currentPage" max-size="maxPages"
-                class="" boundary-links="true" num-pages="numPages"></ul>
+                class="" boundary-links="true" num-pages="numPages" ng-change="getPlants()"></ul>
         </div>
     </div>
 </div>
