--- a/module.frontend-service/src/main/resources/static/index.html
+++ b/module.frontend-service/src/main/resources/static/index.html
@@ -45,7 +45,7 @@
                     Главная
                 </a>
             </div>
-            <div >
+            <div>
                 <a class="menu__item__button text" ng-click="openAuthForm()" ng-show="!isUserLoggedIn()">
                     Войти
                 </a>
@@ -62,7 +62,17 @@
 <ng-View></ng-View>
 
 <footer class="top__container footer__container">
-    <p class="text">Это подвал</p>
+    <p class="text m-0">Этот сервис разработан в рамках учебной программы Java-разработка от портала
+        <a href="https://gb.ru/" target="_blank">"Geek Brains"</a>
+    </p>
+    <p class="text m-0"> Участники проекта:
+    <ul class="flex__container m-0 footer__list">
+        <li><a href="https://github.com/MariaBigCatKuzmina" target="_blank">Мария Кузьмина</a></li>
+        <li><a href="https://github.com/AlexeySenkin" target="_blank">Алексей Сенькин</a></li>
+        <li><a href="https://github.com/Darrasul" target="_blank">Вито Бузас</a></li>
+        <li><a href="https://github.com/MuzafarovAA" target="_blank">Артур Музафаров</a></li>
+    </ul>
+    </p>
     <hr>
     <p class="text">
         Photo by <a
