старница пользователя - первое приближение

--- a/module.frontend-service/src/main/resources/static/PlantCard/PlantCard.html
+++ b/module.frontend-service/src/main/resources/static/PlantCard/PlantCard.html
@@ -8,7 +8,7 @@
                     Добавить к себе
                 </button>
                 <div class="care__actions__container" ng-show="callPlace===2">
-                    <div ng-repeat="bt in actionButtons">
+                    <div ng-repeat="bt in ACTION_BUTTONS">
                         <button class="care__button text" >
                             <img class="bi__care__icon" ng-src="{{bt.img}}" ng-click="careAction(bt.id)" alt="2"
                                  src=""/>
