Добавила возможность разлогиниться, дописала различные заготовки методов для пока нереализованных методов бэка

--- a/module.frontend-service/src/main/resources/static/Auth/AuthForm.html
+++ b/module.frontend-service/src/main/resources/static/Auth/AuthForm.html
@@ -1,7 +1,7 @@
 <div class="auth__container">
     <form class="auth__form" ng-submit="tryToAuth()">
         <label for="username" class="auth__label">Логин</label>
-        <input class="text page__input auth__input" id="username" type="text" ng-model="user.name" placeholder="username" autocomplete="on">
+        <input class="text page__input auth__input" id="username" type="text" ng-model="user.username" placeholder="username" autocomplete="on">
         <label class="auth__label plant__name__header" for="password">Пароль</label>
         <input class="text page__input auth__input" id="password" type="password" ng-model="user.password" placeholder="password"
                autocomplete="false">
