--- a/module.frontend-service/src/main/resources/static/PlantCard/PlantCard.html
+++ b/module.frontend-service/src/main/resources/static/PlantCard/PlantCard.html
@@ -3,12 +3,12 @@
         <div class=" flex__container plant__info__card__container">
             <div class="right__container">
                 <img class="plant__photo plant__card__photo" ng-src="{{imgPath}}{{plant.filePath}}" alt="{{plant.name}}" src="">
-                <button class="page__button mb-5 text text_center" ng-click="addPlantToUsersList()"
+                <button class="page__button mb-5 text text_center" ng-click="addPlantToUserList(plant.id)"
                         ng-show="callPlace===1">
                     Добавить к себе
                 </button>
                 <div class="care__actions__container" ng-show="callPlace===2">
-                    <div ng-repeat="bt in ACTION_BUTTONS">
+                    <div ng-repeat="bt in actionButtons">
                         <button class="care__button text" >
                             <img class="bi__care__icon" ng-src="{{bt.img}}" ng-click="careAction(bt.id)" alt="2"
                                  src=""/>
