--- a/module.frontend-service/src/main/resources/static/PlantCard/PlantCard.html
+++ b/module.frontend-service/src/main/resources/static/PlantCard/PlantCard.html
@@ -1,7 +1,7 @@
 <div>
     <div class="top__container">
         <div class="plant__info__card__container">
-<!--            ng-src="{{imgPath}}{{plant.filePath}}"-->
+            <!--            ng-src="{{imgPath}}{{plant.filePath}}"-->
             <div class="info__left__container">
                 <img class="plant__photo plant__card__photo" ng-src="{{plantPhotoCurrent}}" alt="{{plant.name}}"
                      src="">
@@ -23,31 +23,35 @@
                 </div>
             </div>
             <div class="info__right__container">
-                <label class="text plant__edit__info__row" for="plantName">
+                <label class="plant__info__label plant__edit__info__row" for="plantName">
                     <span ng-show="isAdmin()"> Название: </span>
                     <input id="plantName"
                            ng-class="{'text plant__edit__control plant__edit__input':isAdmin(), 'plant__name__header':!isAdmin()}"
                            ng-model="plant.name" ng-disabled="!isAdmin()">
                 </label>
-                <label class="text plant__edit__info__row" for="plantFamily"> Семейство:
+                <label class="plant__info__label plant__edit__info__row" for="plantFamily"> Семейство:
                     <input id="plantFamily"
                            ng-class="{'text plant__edit__control plant__edit__input':isAdmin(), 'text':!isAdmin()}"
                            ng-model="plant.family" ng-disabled="!isAdmin()">
                 </label>
-                <label class="text plant__edit__info__row" for="plantGenus"> Род:
+                <label class="plant__info__label plant__edit__info__row" for="plantGenus"> Род:
                     <input id="plantGenus"
                            ng-class="{'text plant__edit__control plant__edit__input':isAdmin(), 'text':!isAdmin()}"
                            ng-model="plant.genus" ng-disabled="!isAdmin()">
                 </label>
-                <div class="text" ng-show="!isAdmin()">{{plant.description}}</div>
-
+                <div class="" ng-show="!isAdmin()">
+                    <div class="plant__info__label">Краткое описание:</div>
+                    <div class="text mb-5">{{plant.shortDescription}}</div>
+                    <div class="plant__info__label">Полное описание:</div>
+                    <div class="text mb-5">{{plant.description}}</div>
+                </div>
                 <div class="plant__textarea__container" ng-show="isAdmin()">
-                    <label class="text plant__edit__info__row" for="plantShort"> Краткое описание:</label>
+                    <label class="plant__info__label plant__edit__info__row" for="plantShort"> Краткое описание:</label>
                     <textarea id="plantShort"
                               class="text plant__edit__control plant__edit__textarea"
                               ng-model="plant.shortDescription" ng-disabled="!isAdmin()"></textarea>
 
-                    <label class="text plant__edit__info__row" for="plantDescription">Описание:</label>
+                    <label class="plant__info__label plant__edit__info__row" for="plantDescription">Описание:</label>
                     <textarea id="plantDescription"
                               class="text plant__edit__control plant__edit__textarea"
                               ng-model="plant.description" ng-disabled="!isAdmin()"></textarea>
