--- a/module.frontend-service/src/main/resources/static/PlantCard/PlantCard.html
+++ b/module.frontend-service/src/main/resources/static/PlantCard/PlantCard.html
@@ -13,7 +13,8 @@
                         ng-show="isAdmin()">
                     Загрузить фото
                 </button>
-                <div class="care__actions__container" ng-show="callPlace===2">
+<!--                callPlace===2-->
+                <div class="care__actions__container" ng-show="true">
                     <div ng-repeat="bt in actionButtons">
                         <button class="care__button text">
                             <img class="bi__care__icon" ng-src="{{bt.img}}" ng-click="careAction(bt.id)" alt="2"
