--- a/module.frontend-service/src/main/resources/static/index.html
+++ b/module.frontend-service/src/main/resources/static/index.html
@@ -44,7 +44,8 @@
                 <a class="menu__item__button text" ng-click="home()">
                     Главная
                 </a>
-                <a class="menu__item__button text" href="" ng-show="isUserLoggedIn() && !isAdmin()" ng-click="showMyPlantList()">
+                <a class="menu__item__button text" href="" ng-show="isUserLoggedIn() && !isAdmin()"
+                   ng-click="showMyPlantList()">
                     Мои растения
                 </a>
             </div>
