исправление поправила добавление нового растения, чтобы можно было назначать уход

--- a/module.frontend-service/src/main/resources/static/PlantCard/PlantCard.html
+++ b/module.frontend-service/src/main/resources/static/PlantCard/PlantCard.html
@@ -47,9 +47,9 @@
                                    ng-model="care.interval"
                                    ng-disabled="!enableCareIntervalInput(care.id)"> дней </label>
                     </div>
-                    <button class="page__button mb-5 text text_center" ng-click="showInterval()">
-                        test
-                    </button>
+<!--                    <button class="page__button mb-5 text text_center" ng-click="showInterval()">-->
+<!--                        test-->
+<!--                    </button>-->
 
                 </div>
 
