--- a/module.frontend-service/src/main/resources/static/Plants/Plants.html
+++ b/module.frontend-service/src/main/resources/static/Plants/Plants.html
@@ -16,9 +16,10 @@
         <div class="top__container plantcards__container">
             <div class="plant__card" ng-repeat="plant in plantsPage">
                 <div class="plant__card__body__container">
-                    <img class="plant__photo" ng-src="{{getPlantImagePath(plant.filePath)}}" alt="{{plant.name}}" src="">
+                    <img class="plant__photo" ng-src="{{getPlantImagePath(plant.filePath)}}" alt="{{plant.name}}" src=""
+                    ng-click="showPlantDetails(plant.id)">
 
-                    <h4 class="plant__name__header">{{plant.name}}</h4>
+                    <h4 class="plant__name__header">{{plant.name}}(id:{{plant.id}})</h4>
                     <p class="text text_center">
                         {{plant.shortDescription}}
                     </p>
