--- a/module.frontend-service/src/main/resources/static/PlantCard/PlantCard.html
+++ b/module.frontend-service/src/main/resources/static/PlantCard/PlantCard.html
@@ -60,7 +60,7 @@
             </div>
             <!--            контейнер с информацией о растении или журнал ухода-->
             <div class="info__right__container">
-                <div class="plant__card__row">
+                <div class="plant__card__row" ng-show="callPlace===1 && !isAdmin() && isAuthorized()">
                     <button ng-class="{'page__button' : !showDescription, 'page__button selected__tab__indication' : showDescription}"
                             ng-click="changeOnDescription(true)">описание
                     </button>
@@ -106,11 +106,11 @@
                     </div>
                 </div>
                 <div ng-show="!showDescription && callPlace===1 && !isAdmin() && isAuthorized()"
-                    ng-repeat="entry in careLogEntries">
-
-                    <p class="plant__care__header"> {{entry.care.careName}}: </p>
-                    <p> {{entry.eventDate}}</p>
-
+                     ng-repeat="entry in careLogEntries">
+                    <div class="plant__card__row">
+                        <p class="plant__care__header"> {{entry.care.careName}}: </p>
+                        <p class="text"> {{entry.eventDate}}</p>
+                    </div>
 
                 </div>
             </div>
