убрала показ id и вывод по два раза полей в профиле пользователя

--- a/module.frontend-service/src/main/resources/static/Plants/Plants.html
+++ b/module.frontend-service/src/main/resources/static/Plants/Plants.html
@@ -19,7 +19,7 @@
                     <img class="plant__photo" ng-src="{{getPlantImagePath(plant.filePath)}}" alt="{{plant.name}}" src=""
                     ng-click="showPlantDetails(plant.id)">
 
-                    <h4 class="plant__name__header">{{plant.name}}(id:{{plant.id}})</h4>
+                    <h4 class="plant__name__header">{{plant.name}}</h4>
                     <p class="text text_center">
                         {{plant.shortDescription}}
                     </p>
