--- a/module.frontend-service/src/main/resources/static/User/UserProfile.html
+++ b/module.frontend-service/src/main/resources/static/User/UserProfile.html
@@ -22,17 +22,17 @@
                            ng-class="{'text user__edit__control user__edit__input' : !toDisable , 'text user__edit__input' : toDisable}"
                            ng-model="userData.userName" ng-disabled="toDisable">
                 </p>
-                <p class="user__info__labels"> e-mail: {{userData.email}}
+                <p class="user__info__labels"> e-mail:
                     <input id="email"
                            ng-class="{'text user__edit__control user__edit__input' : !toDisable , 'text user__edit__input' : toDisable}"
                            ng-model="userData.email" ng-disabled="toDisable" >
                 </p>
-                <p class="user__info__labels"> Имя: {{userData.firstName}}
+                <p class="user__info__labels"> Имя:
                     <input id="firstName"
                            ng-class="{'text user__edit__control user__edit__input' : !toDisable , 'text user__edit__input' : toDisable}"
                            ng-model="userData.firstName" ng-disabled="toDisable" >
                 </p>
-                <p class="user__info__labels"> Фамилия: {{userData.lastName}}
+                <p class="user__info__labels"> Фамилия:
                     <input id="lastName"
                            ng-class="{'text user__edit__control user__edit__input' : !toDisable , 'text user__edit__input' : toDisable}"
                            ng-model="userData.lastName" ng-disabled="toDisable">
