исправлен баг с поиском

--- a/module.frontend-service/src/main/resources/static/Plants/Plants.html
+++ b/module.frontend-service/src/main/resources/static/Plants/Plants.html
@@ -5,7 +5,7 @@
                 <div>
                     <input class="page__input text" type="text" name="search" id="search-input"
                            ng-model="plantNameFilter">
-                    <button class="page__button text" ng-click="getPlants()">Найти</button>
+                    <button class="page__button text" ng-click="plants.getPlants()">Найти</button>
                 </div>
                 <div>
                     <button class="page__button text" ng-show="isAdmin()" ng-click="addNewPlant()">Новое</button>
